--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
-                    <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-6 row">
+                    <div class="col-12 col-sm-6 align-self-center">
                         <img src="img/logo.png" class="img-fluid">
+                    </div>
+                    <div class="col-12 col-sm-6 align-self-center">
+                        <a href="#reservetable" role="button" class="btn btn-sm btn-warning btn-block">Reserve Table</a>
                     </div>
                 </div>
             </div>
@@ -74,8 +77,13 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    </div>
+                    <img class="d-flex ml-3 img img-thumbnail align-self-center" src="img/buffet.png" alt="Buffet">
+                </div>
             </div>
         </div>
 
@@ -97,6 +105,59 @@
                             </p>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <div class="row row-content">
+            <div class="col-2 container">
+            </div>
+            <div class="col-sm-8 col-xs-12 container" id="reservetable">
+                <div class="card card-block">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group row">
+                                <label for="noofguests" class="col-12 col-md-2 col-form-label">Number of Guests</label>
+                                <div class="col-sm-4 form-check form-check-inline">
+                                    <input type="radio" class="form-control" id="one" name="one">
+                                    <label for="one">1</label>
+                                    <input type="radio" class="form-control" id="two" name="two">
+                                    <label for="two">2</label>
+                                    <input type="radio" class="form-control" id="three" name="three">
+                                    <label for="three">3</label>
+                                    <input type="radio" class="form-control" id="four" name="four">
+                                    <label for="four">4</label>
+                                    <input type="radio" class="form-control" id="five" name="five">
+                                    <label for="five">5</label>
+                                    <input type="radio" class="form-control" id="six" name="six">
+                                    <label for="six">6</label>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="dateandtime" class="col-xs-12 col-md-2">Date and Time</label>
+                                <div class="custom-control-inline custom-control">
+                                    <div class="row col-xs-12">
+                                        <div class="">
+                                            <input type="text" placeholder="Date" id="dateandtime" class="col-sm-10 col-12 form-control" onfocus="(this.type='date')">
+                                        </div>
+                                        <div class="">
+                                            <input type="text" placeholder="Time" id="dateandtime" class="col-sm-10 col-12 form-control" onfocus="(this.type='time')">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group row container">
+                                <div class="col-xs-12 col-md-2">
+                                </div>
+                                <div class="">
+                                    <button class="btn btn-primary btn-block">Reserve</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-2">
             </div>
         </div>
     </div>
